@@ -65,5 +65,6 @@ add.edges.networkDynamic,
 add.edge.networkDynamic,
 reconcile.vertex.activity,
 reconcile.edge.activity,
-adjust.activity
+adjust.activity,
+get.dyads.active
 )
